<resources>

    <string name="app_name">BittFolio</string>
    <string name="title_activity_tabbed_coin_detail">TabbedCoinDetailActivity</string>
    <string name="title_activity_coin_data">CoinDataActivity</string>
    <string name="logo_for_the_bittfolio_app">Logo for the BittFolio App</string>

    <!-- Strings related to login -->
    <string name="label_prompt_api_key">API Key</string>
    <string name="label_prompt_api_secret">API Secret</string>
    <string name="label_action_sign_in">Sign in</string>
    <string name="label_action_sign_in_short">Sign in</string>
    <string name="error_missing_key">API Key is missing</string>
    <string name="error_missing_secret">API Secret is missing</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_signin_message">Couldn\'t connect to Bittrex</string>

    <!-- Strings related to portfolio -->
    <string name="label_coin">Coin</string>
    <string name="label_holdings">Holdings</string>
    <string name="label_balance">Balance</string>
    <string name="toolbar_action_settings">Settings</string>
    <string name="toolbar_action_change_units">Change Units</string>
    <string name="label_total_portfolio_value">Total Portfolio Value</string>
    <string name="label_show_percent_balance">Show Percent Balance</string>
    <string name="label_hide_percent_balance">Hide Percent Balance</string>
    <string name="label_hide_holdings">Hide Holdings</string>
    <string name="label_show_holdings">Show Holdings</string>
    <string name="label_search">Search</string>
    <string name="label_loading_currency_list">Loading Currency List</string>
    <string name="label_please_enter_the_coin_you_want_to_explore">Please enter the coin you want to explore</string>


    <!--Strings related to order/order history-->
    <string name="label_type">Type</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_quantity_remaining">Quantity Remaining</string>
    <string name="label_price">Price</string>
    <string name="label_buy_order">Buy Order</string>
    <string name="label_sell_order">Sell Order</string>
    <string name="label_buy">Buy</string>
    <string name="label_buy_price">Buy Price</string>
    <string name="label_sell_price">Sell Price</string>
    <string name="label_sell">Sell</string>
    <string name="label_status">Status</string>
    <string name="label_current_price">Current Price</string>
    <string name="label_current_bid_price">Current Bid Price</string>
    <string name="label_current_ask_price">Current Ask Price</string>
    <string name="label_current_last_price">Current Last Price</string>

    <!--Order History Menu Items-->
    <string name="item_close_order">Close Order</string>
    <string name="item_more_details">More Details</string>

    <!--Strings related to wallets-->
    <string name="label_deposit">Deposit</string>
    <string name="label_withdraw">Withdraw</string>
    <string name="label_wallet_id">Wallet ID</string>
    <string name="label_scan">Scan</string>
    <string name="label_send">Send</string>

    <!--Strings related to price history-->
    <string name="label_24_hour_high">24 Hour High</string>
    <string name="label_24_hour_low">24 Hour Low</string>
    <string name="label_24_hour_volume">24 Hour Volume</string>
    <string name="label_24_hour_change">24 Hour Change</string>
    <string name="label_timeframe">Timeframe</string>

    <!--Toast Messages-->
    <string name="error_cancel_failed">Cancel Failed</string>
    <string name="error_transaction_failed">Transaction Failed</string>
    <string name="error_transaction_failed_with_message">Transaction Failed with Message </string>
    <string name="message_transaction_successful_with_uuid">Transaction Successful with UUID </string>
    <string name="message_order_cancelled">The order was cancelled</string>

    <!--Order History Labels-->
    <string name="label_order_history">Order History</string>
    <string name="label_exchange">Exchange</string>
    <string name="label_order_id">Order Id</string>
    <string name="label_order_type">Order Type</string>
    <string name="label_limit">Limit</string>
    <string name="label_commission_paid">Commission Paid</string>
    <string name="label_price_per_unit">Price Per Unit</string>
    <string name="label_date_opened">Date Opened</string>
    <string name="label_date_closed">Date Closed</string>
    <string name="label_immediate_or_cancel">Immediate Or Cancel</string>
    <string name="label_is_conditional">Is Conditional</string>
    <string name="label_condition">Condition</string>
    <string name="label_condition_target">Condition Target</string>
    <string name="label_loading">Loading</string>
    <string name="label_loading_graph">Loading Graph</string>
    <string name="label_please_wait">Please wait</string>
    <string name="menu_label_close_order">Close Order</string>
    <string name="menu_label_more_details">More Details</string>
    <string name="menu_header_select_order_action">Select Order Action</string>
    <string name="item_cancel_transfer">Cancel Transfer</string>
    <string name="menu_label_cancel_transfer">Cancel Transfer</string>
    <string name="menu_header_select_transfer_action">Select Transfer Action</string>
    <string name="error_cancelling_transfer_message">Cancelling Transfer isn\'t supported yet</string>
    <string name="label_order_details">Order Details</string>
    <string name="label_transfer_details">Transfer Details</string>
    <string name="label_market">Market</string>
    <string name="label_currency">Currency</string>
    <string name="label_news">News</string>


</resources>
