<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:mContext="crypto.manager.bittfolio.activity.CoinDataActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/label_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_order_history"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:orderInCategory="100"
        android:title="@string/label_order_history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_change_balance_percent"
        android:orderInCategory="100"
        android:title="@string/label_show_percent_balance"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_hide_holdings"
        android:orderInCategory="100"
        android:title="@string/label_hide_holdings"
        app:showAsAction="never" />
</menu>
