<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:layout_weight="50"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_order_id"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_order_type"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_quantity"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_quantity_remaining"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_limit"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_commission_paid"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_price"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_price_per_unit"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_date_opened"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_date_closed"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_immediate_or_cancel"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_is_conditional"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_condition"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_condition_target"
            android:textAppearance="?attr/textAppearanceListItem" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:layout_weight="50"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_order_id"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/text_view_order_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_order_type"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/text_view_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_quantity"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/text_view_quantity_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_quantity_remaining"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/text_view_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_limit"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/text_view_commission_paid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_commission_paid"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/text_view_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_price"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/text_view_price_per_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_price_per_unit"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/text_view_date_opened"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_date_opened"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/text_view_date_closed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_date_closed"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/text_view_immediate_or_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_immediate_or_cancel"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/text_view_is_conditional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_is_conditional"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/text_view_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_condition"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/text_view_condition_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/label_condition_target"
            android:textAppearance="?attr/textAppearanceListItem" />

    </LinearLayout>

</LinearLayout>
