<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="crypto.manager.bittfolio.PortfolioFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="crypto.manager.bittfolio.fragment.PortfolioFragment">

    <RelativeLayout
        android:id="@+id/layout_order_history_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/transfer_history_header_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:orientation="horizontal"
            android:weightSum="120">

            <TextView
                android:id="@+id/text_view_exchange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_weight="20"
                android:text="@string/label_exchange"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/text_view_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_weight="20"
                android:text="@string/label_status"
                android:textColor="@android:color/white" />


            <TextView
                android:id="@+id/text_view_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_weight="20"
                android:text="@string/label_type"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/text_view_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_weight="20"
                android:text="@string/label_quantity"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/text_view_quantity_remaining"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_weight="20"
                android:text="@string/label_quantity_remaining"
                android:textColor="@android:color/white" />


            <TextView
                android:id="@+id/text_view_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_weight="20"
                android:text="@string/label_price"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_order_history_header"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/fragment_overall_order_history_entry" />

</RelativeLayout>